<resources>
    <string name="app_name">OnePlus Firmware</string>
    <string name="download">Download</string>
    <string name="copy">Copy</string>
    <string name="phone_name">Phone name</string>
    <string name="phone_image">Phone image</string>
    <string name="phone_rom_version">Phone ROM version</string>
    <string name="phone_rom_date">Phone ROM date</string>
    <string name="phone_rom_size">Phone ROM size</string>
    <string name="phone_rom_md5">Phone ROM MD5</string>
    <string name="copied">Link copied to clipboard</string>
    <string name="search_phone">Search phone</string>
    <string name="search">Search</string>
</resources>